<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnLargeBrush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/large_brush"
        android:src="@drawable/large_brush" />

    <ImageButton
        android:id="@+id/btnMediumBrush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/medium_brush"
        android:src="@drawable/medium_brush" />

    <ImageButton
        android:id="@+id/btnSmallBrush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/small_brush"
        android:src="@drawable/small_brush" />
</LinearLayout>
