<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/vContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background_drawing_view_layout"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_background"
            android:scaleType="centerCrop" />

        <com.example.drawing.utils.DrawingView
            android:id="@+id/vDrawing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80FFFFFF" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/vColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnSkin"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/skin"
            android:contentDescription="@string/image"
            android:src="@drawable/pallet_normal"
            android:tag="@color/skin" />

        <ImageButton
            android:id="@+id/btnBlack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/black"
            android:contentDescription="@string/image"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black" />

        <ImageButton
            android:id="@+id/btnRed"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/red"
            android:contentDescription="@string/image"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red" />

        <ImageButton
            android:id="@+id/btnGreen"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/green"
            android:contentDescription="@string/image"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green" />

        <ImageButton
            android:id="@+id/btnBlue"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/blue"
            android:contentDescription="@string/image"
            android:src="@drawable/pallet_normal"
            android:tag="@color/blue" />

        <ImageButton
            android:id="@+id/btnYellow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/yellow"
            android:contentDescription="@string/image"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow" />

        <ImageButton
            android:id="@+id/btnLollipop"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/lollipop"
            android:contentDescription="@string/image"
            android:src="@drawable/pallet_normal"
            android:tag="@color/lollipop" />

        <ImageButton
            android:id="@+id/btnViolet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/random"
            android:contentDescription="@string/image"
            android:src="@drawable/pallet_normal"
            android:tag="@color/random" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnGallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/button_gallery"
            android:scaleType="fitXY"
            android:src="@drawable/ic_gallery" />

        <ImageButton
            android:id="@+id/btnUndo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/button_undo"
            android:scaleType="fitXY"
            android:src="@drawable/ic_undo" />

        <ImageButton
            android:id="@+id/btnBrush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/button_brush"
            android:scaleType="fitXY"
            android:src="@drawable/ic_brush" />

        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_save" />
    </LinearLayout>
</LinearLayout>